<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>PMG</groupId>
  <artifactId>PMG</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <javafx.version>21.0.1</javafx.version>
  </properties>

  <dependencies>

    <!-- Mongo -->
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>5.5.0</version>
    </dependency>

    <!-- Logger -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
    </dependency>

    <!-- JavaFX -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>${javafx.version}</version>
    </dependency>

	<!-- https://mvnrepository.com/artifact/com.gluonhq.scenebuilder/parent -->
	<dependency>
	    <groupId>com.gluonhq.scenebuilder</groupId>
	    <artifactId>parent</artifactId>
	    <version>25.0.0</version>
	    <type>pom</type>
	</dependency>

	<!-- https://mvnrepository.com/artifact/com.gluonhq.scenebuilder/kit -->
	<dependency>
	    <groupId>com.gluonhq.scenebuilder</groupId>
	    <artifactId>kit</artifactId>
	    <version>25.0.0</version>
	</dependency>

  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>Grafica.Main</mainClass>
          <jvmArgs>
        	<jvmArg>--enable-native-access=javafx.graphics</jvmArg>
     	  </jvmArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
